# cpp-industrial-iot-sim

./: .gitignore  CMakeLists.txt  README.md  package-lock.json  sensor_sim  sensor_test
cpp-industrial-iot-sim/: CMakeLists.txt  sensor_sim
cpp-industrial-iot-sim/include/: BaseSensor.hpp  IObserver.hpp  TemperatureSensor.hpp  VibrationSensor.hpp  WebObserver.hpp
cpp-industrial-iot-sim/src/: BaseSensor.cpp  PressureSensor.cpp  TemperatureSensor.cpp  VibrationSensor.cpp  WebObserver.cpp  main.cpp
frontend/: index.html  package-lock.json
frontend/src/: App.jsx
include/: BaseSensor.hpp  ISensor.hpp  Logger.hpp  PressureSensor.hpp  TemperatureSensor.hpp
iot-backend/: package-lock.json  package.json  server.js
src/: BaseSensor.cpp  Logger.cpp  PressureSensor.cpp  TemperatureSensor.cpp  main.cpp
